Main Microcontroller/User Interface/.metadata/.plugins/org.eclipse.cdt.ui/User Interface.build.log
13:26:25 **** Incremental Build of configuration Debug for project User Interface ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F103xB -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3 -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'StartUserTask':
../Core/Src/main.c:1190:49: error: expected expression before ']' token
          osMessageQueuePut(UserQueueHandle,&val[],1U,0U);
                                                 ^
../Core/Src/main.c:1231:50: error: 'd' undeclared (first use in this function)
           osMessageQueuePut(UserQueueHandle,&val[d],1U,0U);
                                                  ^
../Core/Src/main.c:1231:50: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:1128:13: warning: unused variable 'time' [-Wunused-variable]
   int indc, time;
             ^~~~
../Core/Src/main.c: In function 'StartWeatherTask':
../Core/Src/main.c:1309:12: warning: variable 'period' set but not used [-Wunused-but-set-variable]
   uint32_t period;
            ^~~~~~
make: *** [Core/Src/subdir.mk:49: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

13:26:26 Build Failed. 3 errors, 2 warnings. (took 353ms)

